# thermal-homelab0

./: .dockerignore  .env.example  .gitignore  BUILDING.md  Dockerfile  HOMELAB.md  README.md  docker-compose.yml  main.py  print.py  pyproject.toml  start.py
lib/: config.py  formatting.py  inputs.py  markdown_converter.py  printer.py
www/: index.html
